--- a/Jan02/index.html
+++ b/Jan02/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
 
-    <title>Sketch</title>
+<head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="icon" href="favicon.png">
+	<title>p5play</title>
+	<style>
+		html,
+		body {
+			background-color: black;
+			margin: 0;
+			padding: 0;
+			overscroll-behavior: none;
+		}
+	</style>
+</head>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+<body>
+	<main></main>
 
-    <script src="libraries/p5.min.js"></script>
-    <script src="libraries/p5.sound.min.js"></script>
-  </head>
+	<!-- ONLINE LINKS -->
+	<script src="https://q5js.org/q5.js"></script>
+	<script src="https://p5play.org/v3/planck.min.js"></script>
+	<script src="https://p5play.org/v3/p5play.js"></script>
 
-  <body>
-    <script src="sketch.js"></script>
-  </body>
+	<!-- OFFLINE LINKS -->
+	<!--
+	<script src="node_modules/q5/q5.js"></script>
+	<script src="node_modules/p5play/planck.min.js"></script>
+	<script src="node_modules/p5play/p5play.js"></script>
+	-->
+
+	<!-- YOUR SKETCH -->
+	<script src="sketch.js"></script>
+</body>
+
 </html>
